Update chapter for learning environment part #1 for 2019-20

--- a/workbook/workbook.tex
+++ b/workbook/workbook.tex
@@ -191,54 +191,66 @@
 \part{Labs \& Practical Work}
 \chapter{Learning Environment Part \#1}
 \label{lab1}
-\paragraph{} Because Linux is one of the most widespread operating systems found on web-servers it makes sense for us to use a form of Linux as our \emph{learning environment} for this \emph{Advanced} web technologies module. There are a lot of different versions of Linux, known as distributions or distros, and you might have heard or or even used some of them, for example, Debian or Ubuntu. Because we could spend an entire year learning about Linux, and still have more to learn, we shall use a deliberately simplified installation of a Linux environment. The main thing you will notice to begin with is the absence of a Graphical User Interface (GUI). Most web servers, in fact most servers in general, are administered from the commandline using text commands so in this module we'll build some experience of this aspect of modern computer use. We shall also ignore many aspects, such as administration of Linux servers, so that we can focus on using Linux within the context of web-development. Our focus will be on the development of web-apps and an in depth investigation of what happens on the server side. That said, whilst we won't focus as much on the client, there is plenty of scope within the courseworks to put into practise your previous learning from the Web Techologies module from last year to make things pretty and provide a better user experience.
+\paragraph{} Because Linux is one of the most widespread operating systems found on web-servers it makes sense for us to use a form of Linux as our \emph{learning environment} for this \emph{Advanced} web technologies module. 
+
+\paragraph{} There are a lot of different versions of Linux, known as \emph{distributions} or \emph{distros}, and you might have heard or or even used some of them, for example, Debian\footnote{\url{http://debian.org/}} or Ubuntu\footnote{\url{ubuntu.com}}. Because we could spend an entire year learning about Linux, and still have more to learn, we shall use a deliberately simplified and stripped down installation of a Linux environment, the Ubuntu Server Edition. The main thing you will notice to begin with is the absence of a Graphical User Interface (GUI). Most web servers, in fact most servers in general, are administered from the command-line (or terminal) using text commands so in this module we'll build some experience of this aspect of modern computer use. The reason for this is that the more hardware and software you have installed on a server, then the more there is to go wrong and each place can interact in complex and hard to disentangle ways. If you only have what is absolutely necessary for your server to run and do it's job and nothing more then you have a simpler environment to bug-fix in and one which should be less error prone and more robust.
+
+\begin{framed}
+\textbf{VERY IMPORTANT} Do not install a desktop environment or any graphical tools to your learning environment once you have access to it. Our virtual machines are set up to be lightweight and robust. A GUI will use too many resources, impacting upon other users, and will affect the security and backup software that keeps our virtual infrastructure ticking along nicely. If you do do this, then within a few hours I will get an email from Information Services telling me which machine is a problem, and your machine may be wiped and replaced with a fresh copy. So, opt for an easy life and learn to love the command line ;).
+\end{framed}
+
+\paragraph{} We shall also ignore many aspects of working with Linux, such as administration of Linux servers, so that we can focus on using Linux within the context of web-development. Our focus will be on the development of web-apps and an in depth investigation of what happens on the server side. That said, whilst we won't focus as much on the client, there is plenty of scope within the courseworks to put into practise your previous learning from the Web Techologies module from last year to make things pretty and provide a better user experience.
 
 \paragraph{} There will be a number of core steps involved in getting acquainted with the learning environment:
 
 \begin{enumerate}
-\item Linux Development Server - Our Linux server which runs on the ENU virtual infrastructure.
-\item SSH - To enable us to connect from our Windows machine to our virtual Linux machine
+\item Linux Development Server - Our Ubuntu Linux Virtual Machine which runs on the ENU virtual infrastructure. Each of you will be provided with the address of a specific virtual machine which is your personal learning environment. You will be able to log into this machine using your regular Napier credentials (matriculation number and password) just like you log into regular desktop machines on campus. Your VM is a basic Ubuntu server installation so we will have to install additional software as we go along. However you only have a limited virtual hard-drive so try to restrain yourself from going wild. As a result, you will have access to the \emph{sudo} command to enable you to manipulate your VM as a root user. This means that you can do anything you like to the VM which includes breaking it beyond repair\footnote{If you do break your VM then contact me and I will ask Inforamtion Services to reset it. This means that everything on your VM that is not backed up will be lost -- so keep backups (ideally keep all your work in Git and make copious notes as you go along)}.
+\item SSH - To enable us to connect from our Windows desktop machine to our virtual Linux machine
 \item CLI - The Command Line Interface (CLI) where we'll type commands
-\item Vim - This is our \emph{non-graphical} editor that we shall use to write our source code. 
-\item Git - We shall use Git to store our source code and to ``hand in'' our coursework assignments
+\item Vim - This is our \emph{non-graphical} editor that we shall use to write our source code. There are lots of command line editors available. Pico and Nano are alternatives, and you can whichever command line editor you like. However, this workbook will assume that your default editor is Vim and so your might have to adjust some commands and procedures.
+\item Git - We shall use Git to store our source code and to ``hand in'' our coursework assignments. You will create a \emph{bare Git repository} on your VM, which is the one that I will clone for your assignment submission. However, you are also encouraged to make a backup of your repository to another location, e.g. your own laptop, GitHub, GitLab, BitBucket, or wherever.
 \end{enumerate}
 
-\paragraph{} By the end of this section of the module you should be able to access our Linux server by logging in using SSH, navigate around the command-line, use Vim to edit our files, and use Git to store our files. This constitutes a core set of tools that should allow you to log into almost any Linux server, whether a very small one running on a Raspberry Pi\footnote{\url{https://www.raspberrypi.org}} or a very large one, for example the top 10 fastest supercomputers in the world all run a version of Linux\footnote{\url{http://www.top500.org/lists/2015/06/}}, and feel quite at home very quickly. I am not expecting you to achieve all of this in just a single lab session, but you should accomplish this easily within the lab \emph{and} this week's self-study time.
+\paragraph{} By the end of this section of the module you should be able to access your Linux VM by logging in using SSH, navigate around the command-line, use Vim (or similar) to edit your files, and use Git to store your files. This constitutes a core set of tools that should allow you to log into almost any Linux server, whether a very small one running on a Raspberry Pi\footnote{\url{https://www.raspberrypi.org}} or a very large one, for example the top 10 fastest supercomputers in the world all run a version of Linux\footnote{\url{http://www.top500.org/lists/2015/06/}}, and feel quite at home very quickly. I am not expecting you to achieve all of this in just a single lab session, but you should accomplish this easily within the lab \emph{and} this week's self-study time.
 
 \begin{framed}
-\textbf{IMPORTANT} It is a good habit for you to keep notes whenever you are learning a new tool or environment. I keep a textfile on my computer which also means that I can occasionally copy and paste commands if necessary. This way you won't have to immediately remember how you solved a problem but can look how you did it last time. This makes the whole process much less frustrating. It is how I learned to work with Linux and Git and I still refer to my notes every so often when trying to do something that I rarely do and can't quite remember the syntax for.
+\textbf{IMPORTANT} It is a good habit for you to keep notes whenever you are learning a new tool or environment. I keep a textfile on my computer which also means that I can occasionally copy and paste commands if necessary. I also keep a paper-based notebook for more reflextive thoughts and ideas. This way you won't have to immediately remember how you solved a problem but can look how you did it last time. This makes the whole process much less frustrating. It is how I learned to work with Linux and Git and I still refer to my notes every so often when trying to do something that I rarely do and can't quite remember the syntax for.
 \end{framed}
 
 
 \section{Linux Development Server}
 \label{linux}
-\paragraph{} The university has a heap of server hardware that is used to provide a virtual infrastructure for us. Within this hardware we have a virtual machine that has been assembled purely for our use. Our Linux server use the Ubuntu server distribution\footnote{\url{https://www.ubuntu.com}} and has just enough software installed so that we can learn about and get comfortable with a Linux system, but not so many tools that it becomes too daunting. From now on when I refer to the ``dev server'' I shall mean this Ubuntu Linux server in the universitie's virtual infrastructure.
+\paragraph{} The university has a heap of server hardware that is used to provide a virtual infrastructure for us. Within this hardware we have a group of virtual machine that has been assembled purely for our use. Our Linux server use the Ubuntu server distribution\footnote{\url{https://www.ubuntu.com}} and has just enough software installed so that we can learn about and get comfortable with a Linux system, but not so many tools that it becomes too daunting. From now on when I refer to the ``dev server'' I shall mean this Ubuntu Linux server in the university's virtual infrastructure.
 
-\paragraph{} It will give you a launchpad from which to explore the wider world of Unix-style operating systems. If you get comfortable with our Linux server then you shouldn't feel (too) lost trying any other Linux distribution. What you will notice however is that our Linux server is command line only. There is no GUI, no mouse, no point-and-click, and no graphical software. Instead we will have to get used to interacting with the computer using text commands. This is because the vast majority of web servers are text-only. Graphical interfaces provide more complexity, more things to go wrong, and require more hardware to support them whereas we want our web-servers to be robust and performant. Consider this an introduction to how the majority of real-world web-servers exist.
+\paragraph{} Your dev server will give you a launchpad from which to explore the wider world of Unix-style operating systems. If you get comfortable with your Linux server then you shouldn't feel (too) lost trying any other Linux distribution. There are obviously differences between distros, but the the Linux kernel and the GNU userland tools are frequently the core of any distribution.
 
-\paragraph{} Because our server is command line only we'll have to learn some new tools, or at least new ways to interact with tools that we might have already seen, but via GUIs. Our development server has Python, Flask, SQLite, and Vim installed as well as the standard Linux command line tools. When you log in, the text environment that you are presented with is called a shell and the name of the specific shell we use is called BASH. BASH is, in itself, a programming environment which will run `BASH scripts'. BASH is really useful for whipping up quick bits of code to solve problems, especially those that involve lots of repetition, i.e. the kinds of things that a computer is good at. We will access this server using PuTTY, or any other SSH client using our regular Napier credentials, e.g. your matriculation number and password. The server is located at \url{set09103.napier.ac.uk}
+\paragraph{} What you will notice is that your Linux server is command line only. There is no GUI, no mouse, no point-and-click, and no graphical software. Instead we will have to get used to interacting with the computer using text commands. This is because the vast majority of web servers are text-only. Graphical interfaces provide more complexity, more things to go wrong, and require more hardware to support them whereas we want our web-servers to be robust and performant. Consider this an introduction to how the majority of real-world web-servers exist. There is a very good chance that if you work in any software-centric capacity in the future, then you might have to deal with command-line oriented servers, so why not get used to that now? You might like it.
 
-\section{Alternative Learning Environments}
+\paragraph{} Because our server is command line only we'll have to learn some new tools, or at least new ways to interact with tools that we might have already seen, but via GUIs. Eventually your development server will include Python, Flask, SQLite, and Vim, and perhaps even some additional tools installed. We will install them as we go along. By default though you have the standard Linux command line tools. When you log in, the text environment that you are presented with is called a shell and the name of the specific shell we use is called BASH. BASH is, in itself, a programming environment which will run `BASH scripts'. BASH is really useful for whipping up quick bits of code to solve problems, especially those that involve lots of repetition, i.e. the kinds of things that a computer is good at. We will access this server using PuTTY, or any other SSH client using our regular Napier credentials, e.g. your matriculation number and password. You will be able to find out exactly which VM you have access to but all servers will have an address of the following basic form: \url{webtech-NUMBER.napier.ac.uk}, for example, I will be using  \url{webtech-00.napier.ac.uk} as a demonstration environment that matches your learning environment. Note that you won't be able to access any of the other VMs so there is no point in trying. The list of mappings of VM to matriculation number should be available on the module's Moodle page from week \#1. If your matriculation number isn't listed then contact the module leader. The list is generated automatically from enrollment data which isn't always accurate until after the start of the trimester. We'll get into the actual logging in process in just a moment. There are some preliminary things to cover first.
+
+\section{Alternative Learning Environments (optional)}
 \label{alternatives}
-\paragraph{} If you have an OSX or Linux laptop then you can easily install Python, Flask, Vim and all the other tools locally without needing to use the development server. Talk to the module leader or the demonstrator about this. However you should note that you will need to put your coursework assignments onto the development server for the hand-in and demonstration so you should not ignore it until the deadline because this will be stressful for you.
+\paragraph{} If you have a Mac OS or Linux laptop then you can easily install of the tools that we'll use, e.g. Python, Flask, Vim, etc. locally without needing to use the development server. Talk to the module leader or the demonstrator about this. However you should note that you will need to put your coursework assignments onto the development server for the hand-in and demonstration so you should not ignore it until the deadline because this will be stressful for you.
 
-\paragraph{} A second alternative is to install a Linux, like Ubuntu server, into a virtual machine running under VirtualBox on your own laptop. This is quite advanced and will require non-trivial understanding of Linux and virtualisation. For this reason it's not directly supported but is an allowable option for students who are confident of their Linux admin skills.
+\paragraph{} A second alternative is to install a Linux, like Ubuntu server, into a virtual machine running under VirtualBox on your own laptop. This is quite advanced and will require non-trivial understanding of Linux and virtualisation. For this reason it's not directly supported but is an allowable option for students who are confident of their Linux admin skills. Again though, you will need to put your work onto your Napier VM for demonstration, hand-in, and assessment purposes.
 
 \paragraph{} Finally, you can also, if you really must, install Python and the Flask library onto your Windows machine. However, in this case you should note that the Windows command line is very different to that provided in Linux and Mac OS.
 
+\paragraph{} In all cases, the alternative learning environments are to help you to find a way to work that suits you, but they aren't a short cut to success.
+
 \section{SSH}
 \label{ssh}
-\paragraph{} SSH which stands for `Secure Shell' is a tool for logging in to remote servers. This means that you get a window on your local machine into which you can type commands. These commands are executed by the remote server and the results are displayed to you in the window on your local machine. We will use SSH to access the dev server. Note that you can run SSH multiple times to provide us with an easy way to get multiple windows so that we can easily multi-task on the remote machine. For example, one advantage of having multiple shells is that we can edit and save a program in one shell and run the program and monitor output in another shell. As you can imagine, this is very useful when we are developing new web apps on the dev server.
+\paragraph{} SSH which stands for `Secure Shell' is a tool for logging in to remote servers. This means that you get a window on your local machine into which you can type commands. These commands are executed by the remote server and the results are displayed to you in the window on your local machine. We will use SSH to access the dev server. Note that you can run SSH multiple times to provide you with an easy way to get multiple windows so that you can easily multi-task on the remote machine. For example, one advantage of having multiple shells is that we can edit and save a program in one shell and run the program and monitor output in another shell. As you can imagine, this is very useful when we are developing new web apps on the dev server.There are also tools that will manage multiple SSH connections for you.
 
-\paragraph{} If you are on Linux or OS X then you will already have a version of SSH installed and all you need to do is open a terminal and type the following to log into the dev server:
+\paragraph{} If you are on Linux or OS X then you will already have a version of SSH installed and all you need to do is open a terminal and type the following to log into your dev server:
 
 \begin{lstlisting}[style=DOS]
-    $ ssh MATRICNUMBER@set09103.napier.ac.uk
+    $ ssh MATRICNUMBER@webtech-NUMBER.napier.ac.uk
 \end{lstlisting}
 
-\paragraph{} to log into the dev server. NB. You \emph{MUST} replace MATRICNUMBER with your actual matriculation number from your napier credentials. Note that we should be very careful to type commands accurately, especially the log in command above, and to also to type our password accurately. If we make too many mistakes then the security service on the server will ban you for a period of time. This is a protection to stop attackers from trying multiple attempts at our passwords in order to gain access to the machine.
+\paragraph{} NB. You \emph{MUST} replace MATRICNUMBER with your actual matriculation number from your napier credentials. You also need to replace NUMBER with the specific VM number you were assigned. Note that we should be very careful to type commands accurately, especially the log in command above, and to also to type our password accurately. If we make too many mistakes then the security service on the server will ban you for a period of time. This is a protection to stop attackers from trying multiple attempts at our passwords in order to gain access to the machine. Currently the security setup is quite sensitive, about 2 failed login attempts can get you banned from logging in for about 5 minutes.
 
-\paragraph{} If you are on Windows then your will need to download an SSH client as this is not a standard Windows tool. The most popular client for Windows is called PuTTY\footnote{\url{http://the.earth.li/~sgtatham/putty/latest/x86/putty.exe}}. There is also a link to a cached copy of PuTTY from the module web page. Download PuTTy, put it somewhere safe where you can access it then double click it to run. There is no need to install PuTTY as it is very portable. When PuTTY runs you will be presented with the following screen:
+\paragraph{} If you are on Windows or a lab machine, which will be the default for many of you, then you will need to download an SSH client as this is not a standard Windows tool. A popular client for Windows is called PuTTY\footnote{\url{http://the.earth.li/~sgtatham/putty/latest/x86/putty.exe}}. There is also a link to a cached copy of PuTTY from the module web page. Download PuTTy, put it somewhere safe where you can access it then double click it to run. There is no need to install PuTTY as it is very portable. When PuTTY runs you will be presented with the following screen:
 
 \begin{figure}[H]
 \centering
@@ -247,11 +259,11 @@
 \label{fig:putty-empty}
 \end{figure}
 
-\paragraph{} or like this for the development server (again remembering to replace matric-number with your actual matriculation number):
+\paragraph{} or like this when you've added your VM address to the \emph{Host Name} textbox (again remembering to replace MATRICULATION with your actual matriculation number and NUMBER with your VM ID:
 
 \begin{figure}[H]
 \centering
-\includegraphics[width=0.5\textwidth]{images/putty_complete_devserver.png}
+\includegraphics[width=0.5\textwidth]{images/putty_complete_vm.png}
 \caption{The PuTTY Window with completed connection details for the development server}
 \label{fig:putty-complete}
 \end{figure}
@@ -266,7 +278,7 @@
 \label{fig:putty-alert}
 \end{figure}
 
-\paragraph{} If so, you can just click the `Yes' button. If all goes well you should now be presented with a login window for the dev server and all you have to do is type in your ENU password. You should then be presented with a command line shell on the dev server. Note that some details may vary depending upon which OS you are accessing the dev server from and depending upon your user name. The following is only indicative of what to expect:
+\paragraph{} If so, you can just click the `Yes' button (but should read and try to undestand what it is saying). If all goes well and you are on campus then you will be presented with a window containing a command line interface at which you can work. This Window is a connection directly to your VM and anything you do there is actually happening across the network on a remote piece of hardware. If you are off campus then you will likely be presented with a login window for the dev server and all you have to do is type in your ENU password to authenticate. Again, be accurate so that you don't temporarily lock yourself out. After all this you should then be presented with a command line shell on your dev server. Note that some details may vary depending upon which OS you are accessing your dev server from and depending upon your user name. The following is only indicative of what to expect:
 
 \begin{figure}[H]
 \centering
@@ -275,7 +287,7 @@
 \label{fig:dev-server-login-window}
 \end{figure}
 
-\paragraph{} Remember, you can repeat this process with PuTTY as many times as required to get yourself enough shells into the development server to make things easier to work with\footnote{This is not the best way to work with multiple shells. Another, more powerful way is to use a shell multiplexer, my favourite is one called Screen (\url{https://www.gnu.org/software/screen/}) but that is yet another tool to learn, and another set of commands, so lets try to keep things \emph{reasonably} simple for now}.
+\paragraph{} Remember, you can repeat this process with PuTTY as many times as required to get yourself enough shells into the development server to make things easier to work with\footnote{This is not the best way to work with multiple shells. Another, more powerful way is to use a shell multiplexer, my favourite is one called Screen (\url{https://www.gnu.org/software/screen/}) (Tmux is an alternative that is popular) but these are yet more tools to learn, and another set of commands, so lets try to keep things \emph{reasonably} simple for now. Being aware that these things exist though means that when you really need them you know that there is a tool out there waiting for you.}. Alternatively you can use a different SSH client tool, there are many for Windows and some have useful features, like managing multiple connections. Alternatives include the following, but there are many more, MobaXTerm\footnote{\url{https://mobaxterm.mobatek.net/}}, MremoteNG\footnote{\url{https://mremoteng.org/}}, secureCRT\footnote{\url{https://www.vandyke.com/products/securecrt/}}, and Solar Putty\footnote{\url{https://www.solarwinds.com/free-tools/solar-putty}}. Note that not all of these are free however, but some have a demo, evaluation, or community version that you can use. The moral here is to try things out, see what works for you, and care about the tools that you learn to use.
 
 \begin{framed}
 \textbf{IMPORTANT TIP} I usually use SSH to log in at least twice. This gives me a window to edit text in and a window to test my code in. Often I will also have a third window open which I use for command line interaction, Git commits, and testing API calls using cURL, but two is the minimum for a nice development setup - Remember, this is your development environment so you might as well take some time to set it up nicely and so that you can work more productively.
@@ -285,12 +297,13 @@
 \section{Basic Linux Usage}
 \label{linux}
 
-\paragraph{} When we first log in to Linux we will see a prompt, a place where we can type commands. It looks something like this:
+\paragraph{} When we first log in to Linux we will see a prompt, a place where we can type commands. It looks something like this (again, your specific VM might have a different name so might not \emph{exactly} match this):
 
 \begin{lstlisting}[style=DOS]
     40001111@soc-web-liv-12:~$ 
 \end{lstlisting}
-\paragraph{} This simply means that the user `40001111' is logged into the machine called `soc-web-liv-12'. The `:' is merely a separate between the user@machine part of the prompt and the next part `{\raise.17ex\hbox{$\scriptstyle\sim$}}' which is your current location in the filesystem. The tilde or `{\raise.17ex\hbox{$\scriptstyle\sim$}}' symbol is used on Linux machines to mean your home directory. Finally the `\$' symbol is your ``prompt'', the place where anything you type will be displayed.
+
+\paragraph{} This simply means that the user `40001111' is logged into the machine called `soc-web-liv-12'. The `:' is merely a separate between the user@machine part of the prompt\footnote{You can customise your prompt to display just the information that you want to be displayed, but this is left as an exercise for you} and the next part `{\raise.17ex\hbox{$\scriptstyle\sim$}}' which is your current location in the filesystem. The tilde or `{\raise.17ex\hbox{$\scriptstyle\sim$}}' symbol is used on Linux machines to mean your home directory. Finally the `\$' symbol is your ``prompt'', the place where anything you type will be displayed.
 
 \paragraph{} Note that in the remainder of this workbook, we'll just show the `\$' part of the prompt to simplify the examples.
 
@@ -412,7 +425,7 @@ to list the files in the current directory. If you try this now you will be able
 
 \section{Vim}
 \label{vim}
-\paragraph{} Vim is a command-line based text editor. It is based on an earlier editor called Vi (Vim is VI improved, hence Vim, which is a little easier to use). You might ask why we don't just use a GUI text editor like Notepad, or the editor in Visual Studio. The main reason is because we are talking about advanced web technologies, and dealing with them often involves accessing remote servers. Furthermore, the majority of servers do not have a graphical interface and only have installed the most minimal and robust set of tools. The one editor that you are almost guaranteed to find on any Unix or Linux server is Vi and by learning Vim you are well placed to handle Vi. As a result it makes sense for us to become familar with it. Many of us actually find that the shortcuts and powerful control that Vim offers us mean that we just concentrate on learning one editor very well and only use that editor rather than moving to a different editor each time we need to write a different type of document or program in a different language.
+\paragraph{} Vim is a command-line based text editor. It is based on an earlier editor called Vi (Vim is VI improved, hence Vim, which is a little easier to use). You might ask why we don't just use a GUI text editor like Notepad, or the editor in Visual Studio. The main reason is because we are talking about advanced web technologies, and dealing with them often involves accessing remote servers. Furthermore, the majority of servers do not have a graphical interface and only have installed the most minimal and robust set of tools. The one editor that you are almost guaranteed to find on any Unix or Linux server is Vi and by learning Vim you are well placed to handle Vi. As a result it makes sense for us to become familar with it. Many of us actually find that the shortcuts and powerful control that Vim offers us mean that we just concentrate on learning one editor very well and only use that editor rather than moving to a different editor each time we need to write a different type of document or program in a different language. That all said, if you really struggle with VIM, then your VM already has the slightly simpler command line editors, nano and pico installed. You can run either by typing it's name at the terminal. Note that these have an on-screen menu to remind you of the core editing functions available and they are accessed via a key combination such as \string^X, which is the combo for exiting nano (The `\string^' in this case means the ctrl key on your keyboard and not the caret sigil above the number 6).
 
 \paragraph{} What makes Vim different from many of the editors that you will be familar with, like Notepad, is that there is no role for the mouse, no buttons to click at all, only keyboard shortcuts, so we shall learn just enough of those in this module to be able to edit basic documents\footnote{However there are hundreds of Vim commands and a really clever things is that most of the commands can be chained together so that you can automate many editing tasks.}. A second very important aspect of Vim is that it is a \emph{modal} editor. When you use Vim you use it in different modes, when you are typing content into a file then you are in edit mode, and when you are entering commands you are in command mode. When Vim starts it is in command mode and anything you type will be interpreted as a command for Vim to perform. You switch into edit mode by typing `i' (for insert) and you can return to command mode at any time merely be hitting the escape key.
 
